--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-    "java.project.sourcePaths": [
-        "콜라/src",
-        "Student/src",
-        "EXAM03",
-        "Credit/src",
-        "Circle/src",
-        "Calendar/src",
-        "배열테스트/src"
-    ]
+  "java.project.sourcePaths": ["EXAM03", "Credit/src", "배열테스트/src"]
 }
